--- a/lab1/lab1.cabal
+++ b/lab1/lab1.cabal
@@ -37,6 +37,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , hspec >=2.11.9
   default-language: Haskell2010
 
 executable lab1-exe
@@ -50,6 +51,7 @@ executable lab1-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec >=2.11.9
     , lab1
   default-language: Haskell2010
 
@@ -57,6 +59,8 @@ test-suite lab1-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Prob29Spec
+      Prob2Spec
       Paths_lab1
   autogen-modules:
       Paths_lab1
@@ -65,5 +69,6 @@ test-suite lab1-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec >=2.11.9
     , lab1
   default-language: Haskell2010
